GF-36179: Fix carat spacing used in Accordion and ExpandableText.  Fix CSS used to select carat icon colors.  Fix up RTL for both. DCO-1.1-Signed-Off-By: Kevin Schaaf (kevin.schaaf@lge.com)

--- a/css/Accordion.less
+++ b/css/Accordion.less
@@ -3,6 +3,10 @@
 	display: inline-block;
 	padding-right: @moon-spotlight-outset + 25;
 }
+.enyo-locale-right-to-left .moon-accordion .moon-expandable-list-item-header {
+	padding-right: auto;
+	padding-left: @moon-spotlight-outset + 25;
+}
 
 /* Arrow */
 .moon-accordion .moon-accordion-arrow {
@@ -10,12 +14,15 @@
 	background-repeat: no-repeat;
 	background-image: @moon-small-carat-down1;
 }
-.moon-accordion .spotlight .moon-accordion-arrow {
+.enyo-locale-right-to-left .moon-accordion .moon-accordion-arrow {
+	background-position: left center;
+}
+.moon-accordion .moon-accordion-arrow.spotlight {
 	background-image: @moon-small-carat-down2;
 }
 .moon-accordion.open .moon-accordion-arrow {
 	background-image: @moon-small-carat-up1;
 }
-.moon-accordion.open .spotlight .moon-accordion-arrow {
+.moon-accordion.open .moon-accordion-arrow.spotlight {
 	background-image: @moon-small-carat-up2;
 }
